--- a/net.sf.eclipsecs-updatesite/pom.xml
+++ b/net.sf.eclipsecs-updatesite/pom.xml
@@ -130,7 +130,7 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.eclipse.tycho.extras</groupId>
+                        <groupId>org.eclipse.tycho</groupId>
                         <artifactId>tycho-eclipserun-plugin</artifactId>
                         <configuration>
                             <repositories>
