use tycho-eclipse-plugin instead of tycho-eclipserun-plugin

--- a/net.sf.eclipsecs-updatesite/pom.xml
+++ b/net.sf.eclipsecs-updatesite/pom.xml
@@ -131,7 +131,7 @@
                     </plugin>
                     <plugin>
                         <groupId>org.eclipse.tycho</groupId>
-                        <artifactId>tycho-eclipserun-plugin</artifactId>
+                        <artifactId>tycho-eclipse-plugin</artifactId>
                         <configuration>
                             <repositories>
                                 <repository>
