--- a/pom.xml
+++ b/pom.xml
@@ -240,7 +240,7 @@
                 </plugin>
                 <plugin>
                     <groupId>org.eclipse.tycho</groupId>
-                    <artifactId>tycho-eclipserun-plugin</artifactId>
+                    <artifactId>tycho-eclipse-plugin</artifactId>
                     <version>${tycho-version}</version>
                 </plugin>
                 <plugin>
