--- a/pom.xml
+++ b/pom.xml
@@ -114,9 +114,7 @@
                 <version>${tycho-version}</version>
                 <configuration>
                     <target>
-                        <!-- Replace multi module dir by basedir after Tycho 3.0+ can be used.
-                        see https://github.com/eclipse-tycho/tycho/issues/1660 -->
-                        <file>${maven.multiModuleProjectDirectory}/net.sf.eclipsecs.target/net.sf.eclipsecs.target.target</file>
+                        <file>${basedir}/../net.sf.eclipsecs.target/net.sf.eclipsecs.target.target</file>
                     </target>
                     <environments>
                         <environment>
