--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -2,8 +2,10 @@ source.. = src/
 jars.compile.order = .
 bin.includes = .,\
                META-INF/,\
+               lib/,\
                license/,\
                plugin.xml,\
                schema/,\
+               lib/checkstyle-10.14.2-all.jar,\
                OSGI-INF/
 javacDefaultEncoding.. = UTF-8
