--- a/docs/releases.json
+++ b/docs/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 10.18.1",
+    "template": "partials/releases/10.18.1/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 10.18.0",
     "template": "partials/releases/10.18.0/release_notes.html",
     "open": true
