--- a/net.sf.eclipsecs.ui/.settings/org.eclipse.jdt.ui.prefs
+++ b/net.sf.eclipsecs.ui/.settings/org.eclipse.jdt.ui.prefs
@@ -99,6 +99,7 @@ cleanup.remove_unused_private_methods=true
 cleanup.remove_unused_private_types=true
 cleanup.replace_deprecated_calls=false
 cleanup.return_expression=false
+cleanup.simplify_boolean_if_else=false
 cleanup.simplify_lambda_expression_and_method_ref=false
 cleanup.single_used_field=false
 cleanup.sort_members=false
@@ -117,6 +118,8 @@ cleanup.system_property=false
 cleanup.system_property_boolean=false
 cleanup.system_property_file_encoding=false
 cleanup.system_property_file_separator=false
+cleanup.system_property_javaspecversion=false
+cleanup.system_property_javaversion=false
 cleanup.system_property_line_separator=false
 cleanup.system_property_path_separator=false
 cleanup.ternary_operator=false
@@ -258,6 +261,7 @@ sp_cleanup.remove_unused_private_methods=true
 sp_cleanup.remove_unused_private_types=true
 sp_cleanup.replace_deprecated_calls=false
 sp_cleanup.return_expression=false
+sp_cleanup.simplify_boolean_if_else=false
 sp_cleanup.simplify_lambda_expression_and_method_ref=false
 sp_cleanup.single_used_field=false
 sp_cleanup.sort_members=false
@@ -276,6 +280,8 @@ sp_cleanup.system_property=false
 sp_cleanup.system_property_boolean=false
 sp_cleanup.system_property_file_encoding=false
 sp_cleanup.system_property_file_separator=false
+sp_cleanup.system_property_javaspecversion=false
+sp_cleanup.system_property_javaversion=false
 sp_cleanup.system_property_line_separator=false
 sp_cleanup.system_property_path_separator=false
 sp_cleanup.ternary_operator=false
